objects/ASS_RequiredFields_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Opportunity_Required_Fields__c</fullName>
        <label>Opportunity Required Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Required_Fields__c</fullName>
        <label>Quote Required Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Required_Fields__c</fullName>
        <label>Required Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Pursuit_Progress__c</fullName>
        <label>Sales Pursuit Progress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <label>Stage Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ASS RequiredFields Mapping</label>
</CustomObject>